--- a/class2.html
+++ b/class2.html
@@ -27,13 +27,15 @@
         <div class="classOneBox">
             <p>課程介紹</p>
             <hr class="pTitleHr">
-            <p class="threeText">｜<a href="class1.html"><span>功能整合</span></a>｜<a href="class2.html"><span class="color128">費登奎斯式</span></a>｜<a href="class3.html"><span>動中覺察</span></a>｜</p>
+            <p class="threeText">｜<a href="class1.html"><span>功能整合</span></a>｜<a href="class3.html"><span>動中覺察</span></a>｜<a href="class2.html"><span class="color128">費登奎斯式瑜伽</span></a>｜</p>
             <div class="picContainer">
                 <div class="imgText">
                     <img class="classTwoImg" src="images/費登奎斯瑜珈照片1.jpg" alt="費登奎斯瑜珈照片">
                     <div class="imgSlogon">
-                        <p class="OneSlogonTitle">費登奎斯式</p>
-                        <span class="OneSlogonSmallTextOne">哈達串聯基礎瑜珈</span>
+                        <p class="OneSlogonTitle">費登奎斯式瑜伽</p>
+                        <span class="OneSlogonSmallTextOne">基礎覺察</span>
+                        <span class="OneSlogonSmallTextOne">修復呼吸</span>
+                        <span class="OneSlogonSmallTextOne">串連流動</span>
                     </div>
                 </div>
             </div>
@@ -41,40 +43,42 @@
                 <div class="squareText">
                     <img src="images/開頭小框.png" alt="開頭小框">
                     <p class="allContentText">
-                        最原初的費登奎斯身心教育的模式，費登奎斯博士從自身的膝蓋修復過程中
-                        ，逐漸發展出一套讓人可以更健康的方式。
+                        費登奎斯式瑜珈，是Faye集結費登奎斯身心教育與哈達瑜珈系統自成一格的練習方式，主要以八肢串連瑜珈派別為主，也參酌其他如艾楊格派別瑜珈、脈輪為基礎的瑜珈。
                     </p>
                 </div>
                 <div class="squareText">
                     <img src="images/開頭小框.png" alt="開頭小框">
                     <p class="allContentText">
-                        在瑜珈，串連的本意是用特定的動作配合特定的呼吸...
-                        在費登奎斯，律動的意涵呈現覺察整體在當下臨在的所有經歷...
-                        這兩項『動』的品質，為流動瑜珈帶來輕盈與不費力，挑戰在流動之中以和
-                        緩輕柔且連續的速度中鍛練身體肌耐力與柔韌度及專注力。
-
-                        讓動態靜心在進入、在停留與在離開每一個體位法來回貫穿；
-                        讓動態平衡再進入、再停留與再離開每一個體位法協調組織；
-
-                        將費登奎斯中主要策略「Manipulation（操作）
-                        、Orientation（定向）與Timing（時間）」
-                        重新建構體位法，深入身體骨.骼架構及運動關係，充分運用記憶
-                        與想像之經驗法則使身體意象融入體位法。
-
-                        適合各種程度的學習者。
+                        教學上，不強調難度艱深的高表演性質的瑜珈體位法，不想把學生累倒的瑜珈運動課，深切的意圖是，帶領學生品嘗自己如何創造出自己的瑜珈練習經驗。
                     </p>
                 </div>
                 <div class="squareText">
                     <img src="images/開頭小框.png" alt="開頭小框">
+                    <p class="allContentText">
+                        每經過一段時間的堆疊，就會發現自己的變化，無論是空間的改變、時間的推移，不同時空的生活歷練就會對於自我的修練這條路帶來更激勵的視角。
+                    </p>
+                </div>
+                <div class="squareText">
+                    <img src="images/開頭小框.png" alt="開頭小框">
+                    <p class="allContentText">
+                        於是，叫做費登奎斯式瑜珈的混沌湯，這底蘊下，漸漸地，區分出幾道層次：
+                        <br>｜基礎覺察｜建立基礎本來就是最複雜也很困難的一門，複雜的是要把體位法(一幅畫)，拆解成小拼圖(先做簡單的)，然後，再組成完整的體位法(再做複雜的)。困難的是，學習運用覺察來看見這些局部拼圖之間的關係，放棄不執著不過份努力一定要拚出完美的體位法的傳統教育法則。建立回到最原初如同嬰兒時期對所有事物保有好奇的心態來學習如何不費力的建構體位法。
+                        <br>｜修復呼吸｜在動中覺察課程的開始、之間的休息，以及結束，經常在仰躺姿中掃描（SCAN）來進行自我觀察對照內化之用，有點像佛陀倡導的正念或佛教的內觀或禪。讓大腦能以單純清淨放鬆的品質，重整與修復整日與外界的接觸下各種紛擾與散亂。擇選了適合的瑜珈體位法，在晚間來進行的靜心、冥想、呼吸的練習，享受一日下來的沉靜，培養良好的睡眠經驗。
+                        <br>｜串連流動｜傳統的哈達瑜珈是很靜態去進行個別的體位法，但當代瑜珈融合了體操韻律的節奏，以儀式性的Vinyasa(用特定呼吸特定方式來進行體位法本身與其他體位法的之間的連動)來串連流動體位法。動本身，是活的表徵，用多樣選擇性與可反轉性，讓體位法間的變化更加活潑，也為一日的開創滿滿的活力能量。
+                    </p>
+                </div>
+
+                <div class="squareText">
+                    <img src="images/開頭小框.png" alt="開頭小框">
                     <ul class="allContentText">
-                        在這個課程，您將可以學習到～
+                        在這個課程，您將可以學習......
                         <hr class="spaceHr">
-                        <li>完成體式並非最終目的，最大意圖是「如何「做」，如何「達到」的過程</li>
-                        <li>從簡單的「動中覺察」來觀察身心覺受的變化。</li>
-                        <li>運用瑜珈最重要的「呼吸」的多樣面貌與各體式之間的關係</li>
-                        <li>體式中的身體運動面向與動態恆定。</li>
-                        <li>培養覺察能力及配合生物力學，自然發酵成體式的主軸。</li>
-                        <li>協調與組織體式更親近自我的當下能力。</li>
+                        <li>完成體位法並非最終目的，最大意圖是「如何「做」，如何「達到」的過程。</li>
+                        <li>從動中覺察來觀察身心覺受的變化，以不傷害身心為導向且不費力的動作。</li>
+                        <li>運用瑜珈最重要的「呼吸」的多樣面貌與體位法之間的關係。</li>
+                        <li>體位法中的身體運動面向與動態恆定_自我調解的能力。</li>
+                        <li>培養覺察能力及配合生物力學，自然發酵成體位法的運作模式。</li>
+                        <li>理解與組織體位法更親近自我在練習當下的能力。</li>
                     </ul>
                 </div>
             </div>
