--- a/classOrder.html
+++ b/classOrder.html
@@ -31,7 +31,9 @@
                 <div class="orderBoxContentAndHr">
                     <div class="bigSmallTitleBox">
                         <p><a href="class3.html">動中覺察課程</a></p>
-                        <p class="sTitle">眼睛。拾回靈魂之窗</p>
+                        <p class="sTitle">『改善。我。』</p>
+                        <p class="sTitle">《類讀書會》連續劇～第一劇 站有站姿坐有坐姿</p>
+                        <p class="sTitle">週三晚間 / 週六早上</p>
                     </div>
                     <div class="eyeOneContent">
                         <p>每個人口中的瑜珈長的都不一樣，可以說運動是瑜珈、可以說
@@ -75,41 +77,48 @@
                     </div>
                 </div>
                 <div class="orderBoxContent">
-                    <p>週六下午半日研習課</p>
-                    <p>課程日期：</p>
-                    <p>２０２３／１２／３０（已額滿）</p>
-                    <p>其他周六還有名額喔！   ２０２４／１／１３、１／２０、２／２４ </p>
-                    <p>上課時間：每周六下午１４：００～１７：００ （３小時）</p>
-                    <p>點擊<span><a href="https://forms.gle/RjixhSJdJQ2rXmWm8"> 立即報名</a></span></p>
+                    <p>上課時間：週三晚間7:30-9:00</p>
+                    <p>課程日期：2024/9/18-2025/1/16</p>
+                    <p>(2024/10/9、2024/11/6、2025/1/1停課)(共15堂課)</p>
+                    <br>
+                    <p>上課時間：週六早上10:30-12:00</p>
+                    <p>課程日期：2024/9/21-2025/1/18</p>
+                    <p>(2024/10/12、2024/11/9、2025/1/4停課)(共15堂課)</p>
+                    <p class="clickColor">點擊<a href="https://forms.gle/RjixhSJdJQ2rXmWm8"> 立即報名</a></p>
                 </div>
-                <hr class="bottomHr">
             </div>
             <div class="orderBox">
                 <div class="orderBoxContentAndHr">
-                    <p>費登奎斯式</p>
+                    <div class="bigSmallTitleBox">
+                        <p>費登奎斯式瑜珈</p>
+                    </div>
                 </div>
                 <div class="orderBoxContent">
-                    <p>課程日期：２０２３／１２／２２～２０２４／２／２３（２０２３／１２／２６停課）</p>
-                    <p>課程時間：每週五晚間１９：３０～２１：００</p>
-                    <p>點擊<span><a href="https://forms.gle/RjixhSJdJQ2rXmWm8"> 立即報名</a></span></p>
+                    <p class="orderBoxContentSmalltitle">《周二_基礎覺察_午班》</p>
+                    <p>上課時間：週二下午4：00-5:00</p>
+                    <p>課程日期：2024/9/24-2024/12/31 (共15堂課)</p>
+                    <br>
+                    <p class="orderBoxContentSmalltitle">《周四_修復呼吸_晚班》</p>
+                    <p>上課時間：週四晚間7:30-8:30</p>
+                    <p>課程日期：課程日期：2024/9/19-2025/1/2 (2024/10/10停課) (共15堂課)</p>
+                    <br>
+                    <p class="orderBoxContentSmalltitle">《週五_串連流動_早班》</p>
+                    <p>上課時間：週五早上10:30-11:30</p>
+                    <p>課程日期：2024/9/20-2025/1/3 (2024/10/11停課) (共15堂課)</p>
+                    <p class="clickColor">點擊<a href="https://forms.gle/JJgyJ5C12tSmf1hu7"> 立即報名</a></p>
                 </div>
-                <hr class="bottomHr">
             </div>
-            <div class="orderBox">
-                <div class="orderBoxContentAndHr">
-                    <p>「個人課程預約」</p>
-                </div>
+        </div>
+        <div class="schoolTimetable">
+            <div class="orderBoxContentAndImgContainer">
                 <div class="orderBoxContentAndImg">
+                    <p>九月份開放預約時段</p>
                     <img src="images/lineQRcode.png" alt="lineQRcode">
                     <div class="orderBoxContent">
                         <p>掃描ＱＲcode  或<a href="index.html">ＬＩＮＥ報名</a></p>
                     </div>
                 </div>
-                <hr class="bottomHr">
             </div>
-        </div>
-        <div class="schoolTimetable">
-            <p>九月份開放預約時段</p>
             <hr class="pTitleHr">
             <table>
                 <!-- <tr>
@@ -121,34 +130,34 @@
                 </tr> -->
                 <tr>
                     <td class="topDateColor"></td>
-                    <td class="topDateColor">ＴＵＥ（二）</td>
-                    <td class="topDateColor">ＷＥＤ（三）</td>
-                    <td class="topDateColor">ＴＨＵ（四）</td>
-                    <td class="topDateColor">ＦＲＩ（五）</td>
-                    <td class="topDateColor">ＳＡＴ（六）</td>
+                    <td class="topDateColor">週二</td>
+                    <td class="topDateColor">週三</td>
+                    <td class="topDateColor">週四</td>
+                    <td class="topDateColor">週五</td>
+                    <td class="topDateColor">週六</td>
                 </tr>
                 <tr>
-                    <td class="topDateColor">早上</td>
+                    <td class="topDateColor">早 上</td>
                     <td class="dateContent"><span>私人課</span></td>
                     <td class="dateContent"><span></span></td>
-                    <td class="dateContent"><span class="personalClass">個人化課程（空）</span></td>
-                    <td class="dateContent"><span>團體課-費登奎斯瑜珈</span></td>
-                    <td class="dateContent"><span>團體課-動中覺察</span></td>
+                    <td class="dateContent dateContentColor"><span class="personalClass">開放預約</span></td>
+                    <td class="dateContent"><span>費登奎斯式瑜珈課<br>串連流動</span></span></td>
+                    <td class="dateContent"><span>動中覺察課</span></td>
                 </tr>
                 <tr>
-                    <td class="topDateColor">下午</td>
-                    <td class="dateContent"><span>團體課-費登奎斯瑜珈</span></td>
-                    <td class="dateContent"><span>個人化課程</span></td>
-                    <td class="dateContent"><span class="personalClass">個人化課程（空）</span></td>
-                    <td class="dateContent"><span class="personalClass">個人化課程（空）</span></td>
-                    <td class="dateContent"><span class="personalClass">個人化課程（空）</span></td>
+                    <td class="topDateColor">下 午</td>
+                    <td class="dateContent"><span>費登奎斯式瑜珈課<br>基礎覺察</span></td>
+                    <td class="dateContent dateContentColor"><span class="personalClass">個人化課程</span></td>
+                    <td class="dateContent dateContentColor"><span class="personalClass">開放預約</span></td>
+                    <td class="dateContent dateContentColor"><span class="personalClass">開放預約</span></td>
+                    <td class="dateContent dateContentColor"><span class="personalClass">開放預約</span></td>
                 </tr>
                 <tr>
-                    <td class="topDateColor">晚上</td>
+                    <td class="topDateColor">晚 上</td>
                     <td class="dateContent"><span></span></td>
-                    <td class="dateContent"><span>團體課-動中覺察</span></td>
-                    <td class="dateContent"><span class="personalClass">個人化課程（空）</span></td>
-                    <td class="dateContent"><span class="personalClass">個人化課程（空）</span></td>
+                    <td class="dateContent"><span>動中覺察</span></td>
+                    <td class="dateContent"><span>費登奎斯式瑜珈課<br>修復呼吸</span></td>
+                    <td class="dateContent dateContentColor"><span class="personalClass">開放預約</span></td>
                     <td class="dateContent"><span></span></td>
                 </tr>
                 <!-- <tr>
@@ -206,7 +215,19 @@
         <div class="classCaption">
             <p>課程說明</p>
             <hr class="pTitleHr">
-        </div>
+            <p class="classCaptionTitle">｜基礎覺察｜</p>
+            <div class="classCaptionContent">
+                <span>建立基礎本來就是最複雜也很困難的一門，複雜的是要把體位法(一幅畫)，拆解成小拼圖(先做簡單的)，然後，再組成完整的體位法(再做複雜的)。困難的是，學習運用覺察來看見這些局部拼圖之間的關係，放棄不執著不過份努力一定要拚出完美的體位法的傳統教育法則。建立回到最原初如同嬰兒時期對所有事物保有好奇的心態來學習如何不費力的建構體位法。</span>
+            </div>
+            <p class="classCaptionTitle">｜修復呼吸｜</p>
+            <div class="classCaptionContent">
+                <span>在動中覺察課程的開始、之間的休息，以及結束，經常在仰躺姿中掃描（SCAN）來進行自我觀察對照內化之用，有點像佛陀倡導的正念或佛教的內觀或禪。讓大腦能以單純清淨放鬆的品質，重整與修復整日與外界的接觸下各種紛擾與散亂。擇選了適合的瑜珈體位法，在晚間來進行的靜心、冥想、呼吸的練習，享受一日下來的沉靜，培養良好的睡眠經驗。</span>
+            </div>
+            <p class="classCaptionTitle">｜串連流動｜</p>
+            <div class="classCaptionContent">
+                <span>傳統的哈達瑜珈是很靜態去進行個別的體位法，但當代瑜珈融合了體操韻律的節奏，以儀式性的Vinyasa(用特定呼吸特定方式來進行體位法本身與其他體位法的之間的連動)來串連流動體位法。動本身，是活的表徵，用多樣選擇性與可反轉性，讓體位法間的變化更加活潑，也為一日的開創滿滿的活力能量。</span>
+            </div>
+            </div>
     </div>
     <div class="footerContainerBox">
         <div class="footer">
