--- a/class3.html
+++ b/class3.html
@@ -27,7 +27,7 @@
         <div class="classOneBox">
             <p>課程介紹</p>
             <hr class="pTitleHr">
-            <p class="threeText">｜<a href="class1.html"><span>功能整合</span></a>｜<a href="class2.html"><span>費登奎斯式</span></a>｜<a href="class3.html"><span class="color128">動中覺察</span></a>｜</p>
+            <p class="threeText">｜<a href="class1.html"><span>功能整合</span></a>｜<a href="class3.html"><span class="color128">動中覺察</span></a>｜<a href="class2.html"><span>費登奎斯式瑜伽</span></a>｜</p>
             <div class="picContainer">
                 <div class="imgText">
                     <img src="images/動中覺察圖.jpeg" alt="動中覺察圖">
