--- a/share.html
+++ b/share.html
@@ -25,7 +25,7 @@
     </div>
     <div class="contentContainerBox">
         <div class="contentContainer">
-            <p class="year2024">2024年</p>
+            <p class="year2022">2022年</p>
             <div class="contentOne">
                 <img src="images/老師教什麼分享圖.jpeg" alt="老師教什麼分享圖">
                 <p>Ｆａｙｅ老師教什麼</p>
@@ -76,6 +76,7 @@
                     </span>
                 </div>
             </div>
+            <p class="year2023">2023年</p>
             <div class="contentTwo">
                 <img src="images/費登奎斯的特色分享圖.jpeg" alt="費登奎斯的特色分享圖">
                 <p>費登奎斯式的特色</p>
@@ -107,6 +108,57 @@
                     </span>
                 </div>
             </div>
+            <div class="contentOne">
+                <img src="images/老師教什麼分享圖.jpeg" alt="老師教什麼分享圖">
+                <p>Ｆａｙｅ老師教什麼</p>
+                <hr class="contentHr">
+                <hr class="contentSpace">
+                <div class="contentBox">
+                    <span class="oneTextContent">每個人口中的瑜珈長的都不一樣，可以說運動是瑜珈、可以說
+                        連結是瑜珈、可以說解脫是瑜珈，現在大家喜歡把療癒掛在嘴
+                        邊，可以說瑜珈很療癒。那是因為聽到瑜珈兩字就覺得有運動
+                        ？有連結？有解脫？很療癒？還是在練習的過程中？還是在結
+                        束瑜珈練習之後？
+                    </span>
+                    <p class="oneText">繼續閱讀</p>
+                    <span class="hiddenOne">
+                        ２０２３年１１結束了為期一個月的瑜珈老師深度培訓，朝聖在我的瑜珈練習歷程
+                        中影響我至深的老師，帶著好奇與休假的期待，體驗不具瑜珈體位形式而深化『內
+                        在經驗』的八肢瑜珈。這場無論在體力與精力都頗挑戰的瑜珈練習，不下百次的自
+                        我質疑，我究竟為何而來？走錯教室？隨著物換星移，大家不僅年紀變了，思維與
+                        生命的方向也都變了，在我走進費登奎斯世界之後，在看待瑜珈兩字的意涵與當初
+                        〝自以為〞的瑜珈，不同了。
+
+                        這不會是很令人吃驚的變化，只是淡淡的感傷。當然期望總是會失落，即使我已經
+                        越來越遠離所謂的『當代瑜珈』，試圖尋找我覺得的瑜珈的美好，當某天結束一個
+                        挑戰的體位法之後，我聽見老師幽默的語氣說「瑜珈的美好就是當你不再做瑜珈的
+                        時候」，我莞爾的連結到費登奎斯所說的不費力的品質，霎時，我有點了解了我老
+                        了，原來我再走進瑜珈教室，是為了圓一場許久以前所期許的夢，夢都是美好的。
+
+                        這場深度培訓的期間，陸續碰見舊時光的瑜珈夥伴，從夥伴的口中我聽見我找到了
+                        自己的品牌（指的是我在教費登奎斯式瑜珈？），但有意思的是，費登奎斯世界的
+                        夥伴，要我不要放棄瑜珈（但，我現在主要是與人工作，也就是功能整合個案課程
+                        或私人課），兩種不同思惟之下，我開始感覺到混沌與慌亂「那，我在做什麼？」
+
+                        費登奎斯博士說「如果妳知道妳在做什麼，就能做妳想做的」，不禁勾勒出在費登
+                        奎斯師訓時，培訓師曾說過「有些人在瑜珈課中教費登奎斯，也有些人在費登奎斯
+                        課中教瑜珈，但那些都不是費登奎斯」，這段話帶給我的影響如此深遠，幾近成為
+                        座右銘，瑜珈就是瑜珈，費登奎斯就是費登奎斯，費登奎斯與瑜珈兩者之間要有所
+                        區分，然後，漸漸的，我發現我就卡住了。
+
+                        瑜珈激勵我超越界線的勇敢，而費登奎斯引領我讓事物不費力自然發生的膽量，兩
+                        者愈來愈交融，越來越成為一體......因為我，無法被分割。
+
+                        瑜珈的我與費登奎斯的我，相互作用彼此，這或許是費登奎斯博士為什麼一直強調
+                        ，要把他教的方法運用在原本的專業上，讓既有的專業或存在的能力能夠更完善、
+                        更最佳化。於是，當我聽見「瑜珈的好處就是可以不用再做瑜珈開始」時，領悟到
+                        了『餘韻』與『自我意象』之間的關係。我想，我還是必須帶著繼續
+                        探索『費登奎斯』與『瑜珈』。
+                        <p class="oneUp">收合</p>
+                    </span>
+                </div>
+            </div>
+            <p class="year2024">2024年</p>
             <div class="contentThree">
                 <img src="images/動中覺察分享1.jpeg" alt="動中覺察圖">
                 <p>20240113 動中覺察課程＿眼睛。拾回靈魂之窗 第二堂課</p>
