--- a/classOrder.html
+++ b/classOrder.html
@@ -25,7 +25,7 @@
     </div>
     <div class="classOrderContainer">
         <div class="courseOrder">
-            <p>課程報名</p>
+            <p>課程資訊</p>
             <hr class="pTitleHr">
             <div class="orderBox">
                 <div class="orderBoxContentAndHr">
@@ -112,10 +112,10 @@
         <div class="schoolTimetable">
             <div class="orderBoxContentAndImgContainer">
                 <div class="orderBoxContentAndImg">
-                    <p>九月份開放預約時段</p>
+                    <p>個人課程預約表</p>
                     <img src="images/lineQRcode.png" alt="lineQRcode">
                     <div class="orderBoxContent">
-                        <p>掃描ＱＲcode  或<a href="index.html">ＬＩＮＥ報名</a></p>
+                        <p>掃描ＱＲcode  或<a href="index.html">洽詢</a></p>
                     </div>
                 </div>
             </div>
@@ -213,20 +213,22 @@
             </table>
         </div>
         <div class="classCaption">
-            <p>課程說明</p>
+            <h2>課程說明</h2>
             <hr class="pTitleHr">
+            <p class="classCaptionTitleH2">費登奎斯式瑜珈課</p>
             <p class="classCaptionTitle">｜基礎覺察｜</p>
             <div class="classCaptionContent">
-                <span>建立基礎本來就是最複雜也很困難的一門，複雜的是要把體位法(一幅畫)，拆解成小拼圖(先做簡單的)，然後，再組成完整的體位法(再做複雜的)。困難的是，學習運用覺察來看見這些局部拼圖之間的關係，放棄不執著不過份努力一定要拚出完美的體位法的傳統教育法則。建立回到最原初如同嬰兒時期對所有事物保有好奇的心態來學習如何不費力的建構體位法。</span>
+                <span>建立基礎本來就是最複雜也很困難的一門，複雜的是要把體位法(一幅畫)，拆解成小拼圖(先做簡單的)，然後，再組成完整的體位法(再做複雜的)。困難的是，學習運用覺察來看見這些局部拼圖之間的關係，放棄不執著不過份努力一定要拚出完美的體位法的傳統教育法則。建立回到最原初如同嬰兒時期對所有事物保有好奇的心態來學習如何不費力的建構體位。</span>
             </div>
             <p class="classCaptionTitle">｜修復呼吸｜</p>
             <div class="classCaptionContent">
-                <span>在動中覺察課程的開始、之間的休息，以及結束，經常在仰躺姿中掃描（SCAN）來進行自我觀察對照內化之用，有點像佛陀倡導的正念或佛教的內觀或禪。讓大腦能以單純清淨放鬆的品質，重整與修復整日與外界的接觸下各種紛擾與散亂。擇選了適合的瑜珈體位法，在晚間來進行的靜心、冥想、呼吸的練習，享受一日下來的沉靜，培養良好的睡眠經驗。</span>
+                <span>在動中覺察課程的開始、之間的休息，以及結束，經常在仰躺姿中掃描（SCAN）來進行自我觀察對照內化之用，有點像佛陀倡導的正念或佛教的內觀或禪。用這樣的方式，讓大腦能以單純清淨放鬆的品質，重整與修復整日與外界的接觸下各種紛擾與散亂。擇選了適合的瑜珈體位法，在晚間來進行的靜心、冥想、呼吸的練習，享受一日下來的沉靜，培養良好的睡眠經驗。</span>
             </div>
             <p class="classCaptionTitle">｜串連流動｜</p>
             <div class="classCaptionContent">
                 <span>傳統的哈達瑜珈是很靜態去進行個別的體位法，但當代瑜珈融合了體操韻律的節奏，以儀式性的Vinyasa(用特定呼吸特定方式來進行體位法本身與其他體位法的之間的連動)來串連流動體位法。動本身，是活的表徵，用多樣選擇性與可反轉性，讓體位法間的變化更加活潑，也為一日的開創滿滿的活力能量。</span>
             </div>
+            <p>※上述課程，皆適合初學者或有身心狀況者，若有任何疑問，請洽詢。</p>
             </div>
     </div>
     <div class="footerContainerBox">
