--- a/class1.html
+++ b/class1.html
@@ -97,12 +97,15 @@
             </div>
             <div class="informationBoxiconBox">
                 <div class="informationBox">
-                    <p>fayelin0222@gmail.com</p>
-                    <p>０９１９－４１３－３１３</p>
-                    <p>１１６６９台北市文山區景興路２７５巷１號</p>
-                    <p>開車｜景興圖書館停車場出口步行１分鐘或路邊停車格</p>
-                    <p>公車｜景美國小（景興）２５１、２５３、６６０、５０５</p>
-                    <p>Ｔｕｅｓ ～ Ｓａｔ    ／    １０：００～ ２１：００</p>
+                    <p>｜Email｜ fayelin0222@gmail.com</p>
+                    <p>｜聯絡電話｜ ０９１９－４１３－３１３</p>
+                    <p class="noMarginTextP">｜課程地點｜ １１６６９台北市文山區景興路２７５巷１號</p>
+                    <span class="noMarginTextPSecondText">（Google Map搜尋：和非‧費登奎斯）</span>
+                    <p>｜開車｜ 景興圖書館停車場出口 ( 步行1分鐘 ) 或路邊停車格</p>
+                    <p>｜公車｜ 景美國小（景興）２５１、２５３、６６０、５０５</p>
+                    <p class="noMarginTextP">｜捷運｜ 松山新店線 - 景美站1號出口</p>
+                    <span class="noMarginTextPSecondText">（步行５分鐘，行走穿越景美夜市，隔壁是東方不敗麻將專賣店）</span>
+                    <p>｜聯繫時間｜ Ｔｕｅｓ ～ Ｓａｔ    ／    １０：００～ ２１：００</p>
                 </div>
                 <div class="iconBox">
                     <a href="https://www.facebook.com/feldenkraiswithfayelin"><img src="images/fbIcon.png" alt="fbIcon"></a>
