--- a/classOrder.html
+++ b/classOrder.html
@@ -77,6 +77,7 @@
                     </div>
                 </div>
                 <div class="orderBoxContent">
+                    <br>
                     <p>上課時間：週三晚間7:30-9:00</p>
                     <p>課程日期：2024/9/18-2025/1/16</p>
                     <p>(2024/10/9、2024/11/6、2025/1/1停課)(共15堂課)</p>
@@ -94,6 +95,7 @@
                     </div>
                 </div>
                 <div class="orderBoxContent">
+                    <br>
                     <p class="orderBoxContentSmalltitle">《周二_基礎覺察_午班》</p>
                     <p>上課時間：週二下午4：00-5:00</p>
                     <p>課程日期：2024/9/24-2024/12/31 (共15堂課)</p>
@@ -115,7 +117,7 @@
                     <p>個人課程預約表</p>
                     <img src="images/lineQRcode.png" alt="lineQRcode">
                     <div class="orderBoxContent">
-                        <p>掃描ＱＲcode  或<a href="index.html">洽詢</a></p>
+                        <span>掃描ＱＲcode  或<a href="index.html">洽詢</a></span>
                     </div>
                 </div>
             </div>
@@ -211,6 +213,14 @@
                     <td class="dateContent"><span>-停課-</span></td>
                 </tr> -->
             </table>
+            <div class="personalDirection">
+                <h1>｜個人課程｜</h1>
+                <p>包含功能整合或動中覺察或瑜珈課程，視個別身心狀況的需求，欲改善方向與自我探索的量身訂做。</p>
+                <p class="boldColor">｜預約時段｜</p>
+                <p>早上：10:00-11:30</p>
+                <p>下午：13:30-15:00；15:30-17:00</p>
+                <p>晚上：18:30-20:00</p>
+            </div>
         </div>
         <div class="classCaption">
             <h2>課程說明</h2>
@@ -239,12 +249,15 @@
             </div>
             <div class="informationBoxiconBox">
                 <div class="informationBox">
-                    <p>fayelin0222@gmail.com</p>
-                    <p>０９１９－４１３－３１３</p>
-                    <p>１１６６９台北市文山區景興路２７５巷１號</p>
-                    <p>開車｜景興圖書館停車場出口步行１分鐘或路邊停車格</p>
-                    <p>公車｜景美國小（景興）２５１、２５３、６６０、５０５</p>
-                    <p>Ｔｕｅｓ ～ Ｓａｔ    ／    １０：００～ ２１：００</p>
+                    <p>｜Email｜ fayelin0222@gmail.com</p>
+                    <p>｜聯絡電話｜ ０９１９－４１３－３１３</p>
+                    <p class="noMarginTextP">｜課程地點｜ １１６６９台北市文山區景興路２７５巷１號</p>
+                    <span class="noMarginTextPSecondText">（Google Map搜尋：和非‧費登奎斯）</span>
+                    <p>｜開車｜ 景興圖書館停車場出口 ( 步行1分鐘 ) 或路邊停車格</p>
+                    <p>｜公車｜ 景美國小（景興）２５１、２５３、６６０、５０５</p>
+                    <p class="noMarginTextP">｜捷運｜ 松山新店線 - 景美站1號出口</p>
+                    <span class="noMarginTextPSecondText">（步行５分鐘，行走穿越景美夜市，隔壁是東方不敗麻將專賣店）</span>
+                    <p>｜聯繫時間｜ Ｔｕｅｓ ～ Ｓａｔ    ／    １０：００～ ２１：００</p>
                 </div>
                 <div class="iconBox">
                     <a href="https://www.facebook.com/feldenkraiswithfayelin"><img src="images/fbIcon.png" alt="fbIcon"></a>
