--- a/share.html
+++ b/share.html
@@ -23,9 +23,17 @@
         </div>
         <!-- <i class="fa-solid fa-bars"></i> -->
     </div>
+    <div class="yearsBotton">
+        <button type="button">2025年 文章</button>
+        <button type="button">2024年 文章</button>
+        <button type="button">2023年 文章</button>
+        <button type="button">2022年 文章</button>
+        <button type="button">2021年 文章</button>
+        <button type="button">2020年 文章</button>
+    </div>
     <div class="contentContainerBox">
         <div class="contentContainer">
-            <p class="year2022">2022年</p>
+            <p class="year2024">2024年</p>
             <div class="contentOne">
                 <img src="images/老師教什麼分享圖.jpeg" alt="老師教什麼分享圖">
                 <p>Ｆａｙｅ老師教什麼</p>
@@ -158,7 +166,7 @@
                     </span>
                 </div>
             </div>
-            <p class="year2024">2024年</p>
+            <p class="year2022">2022年</p>
             <div class="contentThree">
                 <img src="images/動中覺察分享1.jpeg" alt="動中覺察圖">
                 <p>20240113 動中覺察課程＿眼睛。拾回靈魂之窗 第二堂課</p>
@@ -214,12 +222,15 @@
             </div>
             <div class="informationBoxiconBox">
                 <div class="informationBox">
-                    <p>fayelin0222@gmail.com</p>
-                    <p>０９１９－４１３－３１３</p>
-                    <p>１１６６９台北市文山區景興路２７５巷１號</p>
-                    <p>開車｜景興圖書館停車場出口步行１分鐘或路邊停車格</p>
-                    <p>公車｜景美國小（景興）２５１、２５３、６６０、５０５</p>
-                    <p>Ｔｕｅｓ ～ Ｓａｔ    ／    １０：００～ ２１：００</p>
+                    <p>｜Email｜ fayelin0222@gmail.com</p>
+                    <p>｜聯絡電話｜ ０９１９－４１３－３１３</p>
+                    <p class="noMarginTextP">｜課程地點｜ １１６６９台北市文山區景興路２７５巷１號</p>
+                    <span class="noMarginTextPSecondText">（Google Map搜尋：和非‧費登奎斯）</span>
+                    <p>｜開車｜ 景興圖書館停車場出口 ( 步行1分鐘 ) 或路邊停車格</p>
+                    <p>｜公車｜ 景美國小（景興）２５１、２５３、６６０、５０５</p>
+                    <p class="noMarginTextP">｜捷運｜ 松山新店線 - 景美站1號出口</p>
+                    <span class="noMarginTextPSecondText">（步行５分鐘，行走穿越景美夜市，隔壁是東方不敗麻將專賣店）</span>
+                    <p>｜聯繫時間｜ Ｔｕｅｓ ～ Ｓａｔ    ／    １０：００～ ２１：００</p>
                 </div>
                 <div class="iconBox">
                     <a href="https://www.facebook.com/feldenkraiswithfayelin"><img src="images/fbIcon.png" alt="fbIcon"></a>
