--- a/share.html
+++ b/share.html
@@ -8,6 +8,7 @@
     <script src="jquery-3.7.1.min.js"></script>
     <script src="https://kit.fontawesome.com/6a4f655860.js" crossorigin="anonymous"></script></head>
 <body>
+    <button type="button" class="topBtn"><a href="#topBtn">Top</a></button>
     <div class="header">
         <div class="title">
             <h1>
@@ -23,7 +24,7 @@
         </div>
         <!-- <i class="fa-solid fa-bars"></i> -->
     </div>
-    <div class="yearsBotton">
+    <div class="yearsBotton" id="topBtn">
         <button type="button"><a href="#2025">2025年 文章</a></button>
         <button type="button"><a href="#2024">2024年 文章</a></button>
         <button type="button"><a href="#2023">2023年 文章</a></button>
